--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: url("../beach day.png");
+    background: url("beach day.png");
     background-size: 100vh 100vh;
     size: portrait;
     image-rendering: pixelated;
